--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ['1.25'] # TODO: Test different versions
 
     steps:
     - name: Checkout code
@@ -17,18 +20,22 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: "1.25"
+        go-version: ${{ matrix.go }} # Use the version from the matrix
+        cache: true
 
     - name: Verify dependencies
-      run: go mod tidy && git diff --exit-code
+      run: |
+        go mod download
+        go mod tidy
+        git diff --exit-code
 
     - name: Build
-      run: go build ./...
+      run: go build -v ./...
 
     - name: Vet
       run: go vet ./...
 
-    - name: Run tests
+    - name: Run unit tests
       run: go test -v ./...
 
     - name: Run staticcheck
