--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
       uses: dominikh/staticcheck-action@v1.4.0
       with:
         version: "2024.1.1"
+      env:
+        # staticcheck 2024.1.1 is built with an older toolchain; force a
+        # supported Go version to avoid build failures on Go 1.25.
+        GOTOOLCHAIN: go1.22.9
 
     - name: Run tests with coverage
       run: |
