--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,11 @@ jobs:
     - name: Run unit tests
       run: go test -v ./...
 
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@2025.1.1
+
     - name: Run staticcheck
-      uses: dominikh/staticcheck-action@v1.4.0
-      with:
-        version: "2024.1.1"
-      env:
-        # staticcheck 2024.1.1 is built with an older toolchain; force a
-        # supported Go version to avoid build failures on Go 1.25.
-        GOTOOLCHAIN: go1.22.9
+      run: $(go env GOPATH)/bin/staticcheck ./...
 
     - name: Run tests with coverage
       run: |
