--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,4 +53,4 @@ jobs:
       with:
         files: coverage.out
         flags: unittests
-        fail_ci_if_error: false
+        fail_ci_if_error: true
